--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,9 @@
         android:id="@+id/type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/path"
@@ -15,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/type"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:textSize="20sp" />
 
 </RelativeLayout>
